# go2_mocap_ws

scripts/: clean_csv.py  plot_csv.py
src/go2_description/: CMakeLists.txt  package.xml
src/leash_visualization/: package.xml  setup.cfg  setup.py
src/leash_visualization/launch/: leash_viz.launch.py
src/leash_visualization/leash_visualization/: csv_logger.py  fixed_joint_publisher.py  leash_direction_node.py  mocap_tf_broadcaster.py
src/leash_visualization/rviz/: leash_viz.rviz
