<?xml version="1.0"?>
<package format="3">
  <name>go2_description</name>
  <version>0.1.0</version>
  <description>Unitree Go2 URDF and meshes (copied from unitree_ros)</description>
  <maintainer email="user@todo.com">user</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
