<?xml version="1.0"?>
<package format="3">
  <name>leash_visualization</name>
  <version>0.1.0</version>
  <description>Visualize leash pull direction on Go2 in RViz from Vicon mocap</description>
  <maintainer email="user@todo.com">user</maintainer>
  <license>BSD-3-Clause</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>go2_description</depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
